2009-12-15 MORITA Hajime <morrita@gmail.com>

Reviewed by Eric Seidel.

        Bug 28306: double-clicking a word inside <b> beside newline select two words
        https://bugs.webkit.org/show_bug.cgi?id=28306

        SimplifiedBackwardsTextIterator missed trailing whitespaces just
        before folding line-break, which is used to detect word
        boundaries. This fix checks strings on RenderText and expand text
        range on SimplifiedBackwardsTextIterator to include trailing
        whitespaces if availble.

        Test: editing/selection/doubleclick-beside-cr-span.html

        * editing/TextIterator.cpp:
        (WebCore::collapsedSpaceLength):
        (WebCore::maxOffsetIncludingCollapsedSpaces):
        (WebCore::SimplifiedBackwardsTextIterator::advance):
2009-12-16  MORITA Hajime <morrita@gmail.com>

        Reviewed by Eric Seidel.

        Bug 28306: double-clicking a word inside <b> beside newline select two words
        https://bugs.webkit.org/show_bug.cgi?id=28306

        SimplifiedBackwardsTextIterator missed trailing whitespaces just
        before folding line-break, which is used to detect word
        boundaries. This fix checks strings on RenderText and expand text
        range on SimplifiedBackwardsTextIterator to include trailing
        whitespaces if availble.

        * editing/selection/doubleclick-beside-cr-span-expected.txt: Added.
        * editing/selection/doubleclick-beside-cr-span.html: Added.


Canonical link: https://commits.webkit.org/43659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52235 268f45cc-cd09-0410-ab3c-d52691b4dbfc